# improved-Bcos-PIPNet

./: .gitmodules  BcosPIPNet_FineTuning.ipynb  BcosPIPNet_Training.ipynb  BcosPIPNet_Visualizations.ipynb  CLAUDE.md  README.md  main.py  notebook.ipynb  pyproject.toml
depreciated_notebooks/: BcosPIPNet_FineTuning.ipynb  BcosPIPNet_Training.ipynb
src/: README.md  bcos_features.py  bcos_pipnet.py  datasets.py  finetune_classifier.py  improved_bcos_pipnet.py  improved_losses.py  improved_transforms.py  losses.py  run_pretraining.py  train_finetune.py  train_improved_pretraining.py  train_pretraining.py  transforms.py  visualizations.py
