[project]
name = "improved-bcos-pipnet"
version = "0.1.0"
description = "Improved B-cos PIPNet implementation combining interpretable neural networks with B-cos layers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=1.3.1",
    "torchvision>=0.4.2",
    "numpy>=1.17.3",
    "opencv-python>=4.2.0",
    "scikit-image>=0.16.2",
    "scikit-learn>=0.22.2",
    "scipy>=1.5.2",
    "seaborn>=0.10.0",
    "tensorboard>=2.2.0",
    "captum>=0.2.0",
    "lime>=0.2.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
